Refs #106884 tweak portletMegatopics in order to better fit the larger visualPortalWrapper area as well as preventing the sustainability header from spilling over two lines on mobile resolutions

--- a/eea/design/skins/eeadesign_styles/critical.scss
+++ b/eea/design/skins/eeadesign_styles/critical.scss
@@ -509,11 +509,11 @@ ul {
 #megatopics-area .portlet, #megatopics-area dd {
   margin: 0;
   padding: 0;
-  min-height: 255px;
+  min-height: 286px;
+  height: 100%;
   }
 
 .portlet-megatopic {
-  display: flex;
   white-space: nowrap;
   flex: 1;
   }
@@ -522,6 +522,7 @@ ul {
   height: auto;
   margin: 1.5em;
   padding: 0;
+  white-space: normal;
   }
 
 /* end megatopic frontarea */
